<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Room Booking</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_staff">Today\'s Staff</string>
    <string name="title_staff_present">Present</string>
    <string name="title_staff_scheduled">Scheduled</string>
    <string name="title_staff_dropped">Dropped</string>
    <string name="title_tradeZone">Trade Zone</string>
    <string name="title_approveTrades">Approve Trades</string>
    <string name="title_messageStaff">Message Staff</string>
    <string name="title_alerts">Alerts</string>
    <string name="title_settings">Settings</string>
    <string name="title_logout">Logout</string>
    <string name="title_refresh">Refresh</string>
    <string name="staffItemImageDescription">Staff photo</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="label_timeIn">Time In</string>
    <string name="label_home">Home</string>
    <string name="label_search">Search</string>
    <string name="label_map">Map</string>
    <string name="label_bookings">Bookings</string>

    <!-- Image Descriptions -->
    <string name="drawer_imageDesc">Drawer list icon</string>
    <string name="loginBackground_imageDesc">Login Screen Background Image</string>
    <string name="loginLogo_imageDesc">Login Screen Logo</string>
    <string name="logo">Logo</string>
    <string name="background">Background</string>

    <!-- Calendar Default values -->
    <string name="dayName0">Mar\n30\nSun</string>
    <string name="dayName1">Mar\n31\nMon</string>
    <string name="dayName2">Apr\n1\nTue</string>
    <string name="dayName3">Apr\n2\nWed</string>
    <string name="dayName4">Apr\n3\nThu</string>
    <string name="dayName5">Apr\n4\nFri</string>
    <string name="dayName6">Apr\n5\nSat</string>
    <string name="time0">12am</string>
    <string name="time1">1am</string>
    <string name="time2">2am</string>
    <string name="time3">3am</string>
    <string name="time4">4am</string>
    <string name="time5">5am</string>
    <string name="time6">6am</string>
    <string name="time7">7am</string>
    <string name="time8">8am</string>
    <string name="time9">9am</string>
    <string name="time10">10am</string>
    <string name="time11">11am</string>
    <string name="time12">12pm</string>
    <string name="time13">1pm</string>
    <string name="time14">2pm</string>
    <string name="time15">3pm</string>
    <string name="time16">4pm</string>
    <string name="time17">5pm</string>
    <string name="time18">6pm</string>
    <string name="time19">7pm</string>
    <string name="time20">8pm</string>
    <string name="time21">9pm</string>
    <string name="time22">10pm</string>
    <string name="time23">11pm</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Search Room Attributes    -->
    <string name="searchBuilding">Building Name</string>
    <string name="searchRoomNum">Room Number</string>
    <string name="searchMinCap">Min. Number of People</string>
    <string name="searchMaxCap">Max. Number of People</string>
    <string name="searchBlackboard">Min. # Blackboards</string>
    <string name="searchWhiteboard">Min. # Whiteboards</string>
    <string name="searchTV">Min. # Televisions</string>
    <string name="searchProjector">Min. # Projectors</string>
    <string name="searchTable">Min. # Tables</string>
    <string name="searchChair">Min. # Chairs</string>
    <string name="searchOutlet">Min. # Outlets</string>
    <string name="searchMoveTable">Can the tables be Moved?</string>
    <string name="searchMoveChair">Can the chairs be Moved?</string>
    <string name="searchStartDate">Start Date</string>
    <string name="searchEndDate">End Date</string>
    <string name="searchStartTime">Start Time</string>
    <string name="searchEndTime">End Time</string>

    <string name="dialogBook">Book for 1 Hour</string>
    <string name="dialogAvailTime">Available Times</string>
    <string name="cancel">Cancel</string>

    <string-array name="building_arrays">
        <item> </item>
        <item>Architecture Building (AA)")</item>
        <item>Azrieli Pavillion and Theatre (AT)</item>
        <item>Dunton Tower (DT)</item>
        <item>Herzberg Laboratories (HP)</item>
        <item>Loeb Building (LA)</item>
        <item>Mackenzie Building (ME)</item>
        <item>MacOdrum Library (ML)</item>
        <item>Minto Centre (MC)</item>
        <item>Southam Hall (SA)</item>
        <item>"St. Patrick’s Building (SP)</item>
        <item>Steacie Building (SC)</item>
        <item>Tory Building (TB)</item>
        <item>University Centre (UC)</item>
    </string-array>
</resources>
