<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="never|collapseActionView"
        android:visible="false"
        android:actionViewClass="android.support.v7.widget.SearchView" />

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/navigation_refresh_white"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/title_refresh"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/title_logout"/>

</menu>
