<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerBuilding"
            android:layout_weight="1" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerRoomNumber"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="TooManyViews" >

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:baselineAligned="false"
                tools:ignore="UselessParent" >

                <RelativeLayout android:layout_width="41dp" android:layout_height="52dp" >
                    <Button android:id="@+id/infoButton" style="@style/DayButton"/>

                </RelativeLayout>

                <RelativeLayout android:layout_width="0dp" android:layout_height="52dp" android:layout_weight="1" >
                    <Button android:id="@+id/buttonDayName0" style="@style/DayButton" />
                    <TextView android:id="@+id/textDayName0" android:text="@string/dayName0" style="@style/DayText" />
                </RelativeLayout>

                <RelativeLayout android:layout_width="0dp" android:layout_height="52dp" android:layout_weight="1" >
                    <Button android:id="@+id/buttonDayName1" style="@style/DayButton" />
                    <TextView android:id="@+id/textDayName1" android:text="@string/dayName1" style="@style/DayText" />
                </RelativeLayout>

                <RelativeLayout android:layout_width="0dp" android:layout_height="52dp" android:layout_weight="1" >
                    <Button android:id="@+id/buttonDayName2" style="@style/DayButton" />
                    <TextView android:id="@+id/textDayName2" android:text="@string/dayName2" style="@style/DayText"/>
                </RelativeLayout>

                <RelativeLayout android:layout_width="0dp" android:layout_height="52dp" android:layout_weight="1" >
                    <Button android:id="@+id/buttonDayName3" style="@style/DayButton" />
                    <TextView android:id="@+id/textDayName3" android:text="@string/dayName3" style="@style/DayText" />
                </RelativeLayout>

                <RelativeLayout android:layout_width="0dp" android:layout_height="52dp" android:layout_weight="1" >
                    <Button android:id="@+id/buttonDayName4" style="@style/DayButton" />
                    <TextView android:id="@+id/textDayName4" android:text="@string/dayName4" style="@style/DayText" />
                </RelativeLayout>

                <RelativeLayout android:layout_width="0dp" android:layout_height="52dp" android:layout_weight="1" >
                    <Button android:id="@+id/buttonDayName5" style="@style/DayButton" />
                    <TextView android:id="@+id/textDayName5" android:text="@string/dayName5" style="@style/DayText" />
                </RelativeLayout>

                <RelativeLayout android:layout_width="0dp" android:layout_height="52dp" android:layout_weight="1" >
                    <Button android:id="@+id/buttonDayName6" style="@style/DayButton" />
                    <TextView android:id="@+id/textDayName6" android:text="@string/dayName6" style="@style/DayText" />
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="0dp"
            android:scrollbars="none" >

            <RelativeLayout
                android:id="@+id/relativeLayout242"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="0dp" >
                <View style="@style/HorizontalLine" android:layout_marginTop="0dp" android:background="#777" />
                <View style="@style/HorizontalLine" android:layout_marginTop="30dp" android:background="#777" />
                <View style="@style/HorizontalLine" android:layout_marginTop="60dp" android:background="#777" />
                <View style="@style/HorizontalLine" android:layout_marginTop="90dp" android:background="#777" />
                <View style="@style/HorizontalLine" android:layout_marginTop="120dp" android:background="#777" />
                <View style="@style/HorizontalLine" android:layout_marginTop="150dp" android:background="#777" />
                <View style="@style/HorizontalLine" android:layout_marginTop="180dp" android:background="#777" />
                <View style="@style/HorizontalLine" android:layout_marginTop="210dp" android:background="#777" />
                <View style="@style/HorizontalLine" android:layout_marginTop="240dp" android:background="#777" />
                <View style="@style/HorizontalLine" android:layout_marginTop="270dp" android:background="#777" />
                <View style="@style/HorizontalLine" android:layout_marginTop="300dp" android:background="#777" />
                <View style="@style/HorizontalLine" android:layout_marginTop="330dp" android:background="#777" />
                <View style="@style/HorizontalLine" android:layout_marginTop="360dp" android:background="#777" />
                <View style="@style/HorizontalLine" android:layout_marginTop="390dp" android:background="#777" />
                <View style="@style/HorizontalLine" android:layout_marginTop="420dp" android:background="#777" />
                <View style="@style/HorizontalLine" android:layout_marginTop="450dp" android:background="#777" />
                <View style="@style/HorizontalLine" android:layout_marginTop="480dp" android:background="#777" />
                <View style="@style/HorizontalLine" android:layout_marginTop="510dp" android:background="#777" />
                <View style="@style/HorizontalLine" android:layout_marginTop="540dp" android:background="#777" />
                <View style="@style/HorizontalLine" android:layout_marginTop="570dp" android:background="#777" />
                <View style="@style/HorizontalLine" android:layout_marginTop="600dp" android:background="#777" />
                <View style="@style/HorizontalLine" android:layout_marginTop="630dp" android:background="#777" />
                <View style="@style/HorizontalLine" android:layout_marginTop="660dp" android:background="#777" />
                <View style="@style/HorizontalLine" android:layout_marginTop="690dp" android:background="#777" />
                <View style="@style/HorizontalLine" android:layout_marginTop="720dp" android:background="#777" />
                <View style="@style/HorizontalLine" android:layout_marginTop="15dp" android:layout_marginLeft="42dp" android:background="#aaa" />
                <View style="@style/HorizontalLine" android:layout_marginTop="45dp" android:layout_marginLeft="42dp" android:background="#aaa" />
                <View style="@style/HorizontalLine" android:layout_marginTop="75dp" android:layout_marginLeft="42dp" android:background="#aaa" />
                <View style="@style/HorizontalLine" android:layout_marginTop="105dp" android:layout_marginLeft="42dp" android:background="#aaa" />
                <View style="@style/HorizontalLine" android:layout_marginTop="135dp" android:layout_marginLeft="42dp" android:background="#aaa" />
                <View style="@style/HorizontalLine" android:layout_marginTop="165dp" android:layout_marginLeft="42dp" android:background="#aaa" />
                <View style="@style/HorizontalLine" android:layout_marginTop="195dp" android:layout_marginLeft="42dp" android:background="#aaa" />
                <View style="@style/HorizontalLine" android:layout_marginTop="225dp" android:layout_marginLeft="42dp" android:background="#aaa" />
                <View style="@style/HorizontalLine" android:layout_marginTop="255dp" android:layout_marginLeft="42dp" android:background="#aaa" />
                <View style="@style/HorizontalLine" android:layout_marginTop="285dp" android:layout_marginLeft="42dp" android:background="#aaa" />
                <View style="@style/HorizontalLine" android:layout_marginTop="315dp" android:layout_marginLeft="42dp" android:background="#aaa" />
                <View style="@style/HorizontalLine" android:layout_marginTop="345dp" android:layout_marginLeft="42dp" android:background="#aaa" />
                <View style="@style/HorizontalLine" android:layout_marginTop="375dp" android:layout_marginLeft="42dp" android:background="#aaa" />
                <View style="@style/HorizontalLine" android:layout_marginTop="405dp" android:layout_marginLeft="42dp" android:background="#aaa" />
                <View style="@style/HorizontalLine" android:layout_marginTop="435dp" android:layout_marginLeft="42dp" android:background="#aaa" />
                <View style="@style/HorizontalLine" android:layout_marginTop="465dp" android:layout_marginLeft="42dp" android:background="#aaa" />
                <View style="@style/HorizontalLine" android:layout_marginTop="495dp" android:layout_marginLeft="42dp" android:background="#aaa" />
                <View style="@style/HorizontalLine" android:layout_marginTop="525dp" android:layout_marginLeft="42dp" android:background="#aaa" />
                <View style="@style/HorizontalLine" android:layout_marginTop="555dp" android:layout_marginLeft="42dp" android:background="#aaa" />
                <View style="@style/HorizontalLine" android:layout_marginTop="585dp" android:layout_marginLeft="42dp" android:background="#aaa" />
                <View style="@style/HorizontalLine" android:layout_marginTop="615dp" android:layout_marginLeft="42dp" android:background="#aaa" />
                <View style="@style/HorizontalLine" android:layout_marginTop="645dp" android:layout_marginLeft="42dp" android:background="#aaa" />
                <View style="@style/HorizontalLine" android:layout_marginTop="675dp" android:layout_marginLeft="42dp" android:background="#aaa" />
                <View style="@style/HorizontalLine" android:layout_marginTop="705dp" android:layout_marginLeft="42dp" android:background="#aaa" />

                <LinearLayout android:id="@+id/linearLayout2" android:layout_width="match_parent" android:layout_height="720dp" android:baselineAligned="false" android:padding="0dp" >
                    <RelativeLayout
                        android:id="@+id/relativeLayout2"
                        android:layout_width="42dp"
                        android:layout_height="match_parent"
                        android:padding="0dp" >

                        <View style="@style/VerticalLine" android:layout_alignParentLeft="true" android:background="#aaa" />
                        <View style="@style/VerticalLine" android:layout_alignParentRight="true" android:background="#aaa" />
                        <TextView android:id="@+id/textTime0" style="@style/HourText" android:layout_marginTop="0dp" android:text="@string/time0" />
                        <TextView android:id="@+id/textView1" style="@style/HourText" android:layout_marginTop="30dp" android:text="@string/time1" />
                        <TextView android:id="@+id/textView2" style="@style/HourText" android:layout_marginTop="60dp" android:text="@string/time2" />
                        <TextView android:id="@+id/textView3" style="@style/HourText" android:layout_marginTop="90dp" android:text="@string/time3" />
                        <TextView android:id="@+id/textView4" style="@style/HourText" android:layout_marginTop="120dp" android:text="@string/time4" />
                        <TextView android:id="@+id/textView5" style="@style/HourText" android:layout_marginTop="150dp" android:text="@string/time5" />
                        <TextView android:id="@+id/textView6" style="@style/HourText" android:layout_marginTop="180dp" android:text="@string/time6" />
                        <TextView android:id="@+id/textView7" style="@style/HourText" android:layout_marginTop="210dp" android:text="@string/time7" />
                        <TextView android:id="@+id/textView8" style="@style/HourText" android:layout_marginTop="240dp" android:text="@string/time8" />
                        <TextView android:id="@+id/textView9" style="@style/HourText" android:layout_marginTop="270dp" android:text="@string/time9" />
                        <TextView android:id="@+id/textView10" style="@style/HourText" android:layout_marginTop="300dp" android:text="@string/time10" />
                        <TextView android:id="@+id/textView11" style="@style/HourText" android:layout_marginTop="330dp" android:text="@string/time11" />
                        <TextView android:id="@+id/textView12" style="@style/HourText" android:layout_marginTop="360dp" android:text="@string/time12" />
                        <TextView android:id="@+id/textView13" style="@style/HourText" android:layout_marginTop="390dp" android:text="@string/time13" />
                        <TextView android:id="@+id/textView14" style="@style/HourText" android:layout_marginTop="420dp" android:text="@string/time14" />
                        <TextView android:id="@+id/textView15" style="@style/HourText" android:layout_marginTop="450dp" android:text="@string/time15" />
                        <TextView android:id="@+id/textView16" style="@style/HourText" android:layout_marginTop="480dp" android:text="@string/time16" />
                        <TextView android:id="@+id/textView17" style="@style/HourText" android:layout_marginTop="510dp" android:text="@string/time17" />
                        <TextView android:id="@+id/textView18" style="@style/HourText" android:layout_marginTop="540dp" android:text="@string/time18" />
                        <TextView android:id="@+id/textView19" style="@style/HourText" android:layout_marginTop="570dp" android:text="@string/time19" />
                        <TextView android:id="@+id/textView20" style="@style/HourText" android:layout_marginTop="600dp" android:text="@string/time20" />
                        <TextView android:id="@+id/textView21" style="@style/HourText" android:layout_marginTop="630dp" android:text="@string/time21" />
                        <TextView android:id="@+id/textView22" style="@style/HourText" android:layout_marginTop="660dp" android:text="@string/time22" />
                        <TextView android:id="@+id/textView23" android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginTop="690dp" android:gravity="center|top" android:text="@string/time23" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/relativeLayout3"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="14"
                        android:padding="0dp" >

                        <LinearLayout
                            android:id="@+id/linearLayout3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentTop="true"
                            android:baselineAligned="false"
                            tools:ignore="UselessParent" >

                            <RelativeLayout android:id="@+id/dayLayout0" style="@style/DayLayout" ></RelativeLayout>
                            <RelativeLayout android:id="@+id/dayLayout1" style="@style/DayLayout" ></RelativeLayout>
                            <RelativeLayout android:id="@+id/dayLayout2" style="@style/DayLayout" ></RelativeLayout>
                            <RelativeLayout android:id="@+id/dayLayout3" style="@style/DayLayout" ></RelativeLayout>
                            <RelativeLayout android:id="@+id/dayLayout4" style="@style/DayLayout" ></RelativeLayout>
                            <RelativeLayout android:id="@+id/dayLayout5" style="@style/DayLayout" ></RelativeLayout>
                            <RelativeLayout android:id="@+id/dayLayout6" style="@style/DayLayout" ></RelativeLayout>
                        </LinearLayout>
                    </RelativeLayout>
                </LinearLayout>
            </RelativeLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>